ajustando routes e controllers

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <div class="panel-body">
-                            <form accept-charset="UTF-8" role="form" class="form-signin">
+                            <form accept-charset="UTF-8" role="form" class="form-signin" action="/chat" method="POST">
                                 <fieldset>
                                     <label class="panel-login">
                                         <div class="login_result"></div>
