--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,12 +29,30 @@
                                     <label class="panel-login">
                                         <div class="login_result"></div>
                                     </label>
-                                    <input class="form-control" placeholder="Nome ou apelido" id="apelido" type="text">
+                                    <input class="form-control" placeholder="Nome ou apelido" id="apelido" name="apelido" type="text">
                                     <br></br>
                                     <input class="btn btn-lg btn-success btn-block" type="submit" id="entrar" value="Entrar »">
                                 </fieldset>
                             </form>
                         </div>
+                    </div>
+
+                    <div>
+                        <% if(validacao.length > 0) { %>
+                            <div class='row'>
+                                <div class="col-md-12">
+                                    <div class="alert alert-danger">
+                                        <strong>Atenção!</strong>
+                                        <ul>
+                                            <% for (let i=0; i<validacao.length; i++) { %>
+                                                <li><%=validacao[i].msg%></li>
+                                            <% } %>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                        <%}%>
                     </div>
                 </div>
             </div>
